Add Open SSL submodule.
This was forgotten in the previous commit. It is a forked submodule from Opscode.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "cookbooks/build-essential"]
 	path = cookbooks/build-essential
 	url = git@github.com:tollmanz/build-essential.git
+[submodule "cookbooks/openssl"]
+	path = cookbooks/openssl
+	url = git@github.com:tollmanz/openssl.git
